[package]
name = "keycutter"
version = "0.0.1"
edition = "2021"
description = "msft:rm/algorithm/pkey/2009 encoder/decoder"
license-file = "LICENSE"
repository = "https://github.com/echnobas/keycutter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
